# transientshaper

./: CMakeLists.txt  README.md
include/: parameters.h  plugcontroller.h  plugids.h  plugprocessor.h  version.h
resource/: plug.uidesc
source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
